fix spacing and result image compresion issue

--- a/public/stylesheets/_results_page.scss
+++ b/public/stylesheets/_results_page.scss
@@ -201,7 +201,7 @@ canvas {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    padding: 7vh 5vw 7vh 5vw;
+    padding: 12vh 5vw 7vh 5vw;
 
     div,
     p {
@@ -243,7 +243,7 @@ canvas {
     @media screen and (min-width: 320px) and (max-height: 570px),
     screen and (min-width: 360px) and (max-height: 680px),
     screen and (min-width: 410px) and (max-height: 736px) {
-        padding: 5vh 5vw 5vh 5vw;
+        padding: 10vh 5vw 5vh 5vw;
 
         .eyeEcho-theme_picker-description-title {
             font-size: 5vw;
@@ -259,7 +259,7 @@ canvas {
 
     @media screen and (min-width: 768px) and (max-height: 1024px),
     screen and (min-width: 1024px) and (max-height: 1366px) {
-        padding: 5vh 5vw 5vh 5vw;
+        padding: 10vh 5vw 5vh 5vw;
 
         .eyeEcho-theme_picker-description-title {
             font-size: 5vw;
@@ -521,10 +521,14 @@ canvas {
     }
 }
 
+.eyeEcho-result-image-element-container {
+    height: 84vh;
+    overflow: auto;;
+}
 
 #eyeEcho_result_image_element {
-    width: 100%;
-    height: 84vh;
+    width: 100vw;
+    height: 100vh;
 }
 
 .eyeEcho-result-info-description {
